BE - feat(ChatService): implement AI chat service with caching, user context management, and error handling